--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <link rel="stylesheet" href="/src/css/global/reset.css" />
- <link rel="stylesheet" href="/src/css/global/index.css" />
- <link rel="stylesheet" href="/src/css/pages/index.css" />
- <link rel="stylesheet" href="/src/css/pages/professionalProfile/professionalProfile.css">
- <link rel="stylesheet" href="/src/css/pages/ImcMacro.css/imCeMacro.css" />
+ <link rel="stylesheet" href="./src/css/global/reset.css" />
+ <link rel="stylesheet" href="./src/css/global/index.css" />
+ <link rel="stylesheet" href="./src/css/pages/index.css" />
+ <link rel="stylesheet" href="./src/css/pages/professionalProfile/professionalProfile.css">
+ <link rel="stylesheet" href="./src/css/pages/ImcMacro.css/imCeMacro.css" />
  <link rel="preconnect" href="https://fonts.googleapis.com" />
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
