--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Treino Pro</title>
-    <link rel="stylesheet" href="css/global/reset.css" />
-    <link rel="stylesheet" href="css/global/index.css" />
-    <link rel="stylesheet" href="css/pages/index.css" />
-    <link rel="stylesheet" href="css/pages/login/login.css" />
+    <link rel="stylesheet" href="./src/css/global/reset.css" />
+    <link rel="stylesheet" href="./src/css/global/index.css" />
+    <link rel="stylesheet" href="./src/css/pages/index.css" />
+    <link rel="stylesheet" href="./src/css/pages/login/login.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
