--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
         </form>
-        <script type='module' src="js/pages/Login/login.js"></script>
+        <script type='module' src="./src/js/pages/Login/login.js"></script>
 
     </main>
 
