--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <button type="submit" class="login-button">Login</button><br>
             <p id="mensagem-login"></p>
 
-            <a href="./src/register.html" class="register-link">Cadastrar uma conta</a>
+            <a href="/src/register.html" class="register-link">Cadastrar uma conta</a>
 
 
         </form>
-        <script type='module' src="./src/js/pages/Login/login.js"></script>
+        <script type='module' src="/js/pages/Login/login.js"></script>
 
     </main>
 
