--- a/index.html
+++ b/index.html
@@ -39,27 +39,27 @@
             <button type="submit" class="login-button">Login</button><br>
             <p id="mensagem-login"></p>
 
-            <a href="/src/register.html" class="register-link">Cadastrar uma conta</a>
+            <a href="./src/register.html" class="register-link">Cadastrar uma conta</a>
 
 
         </form>
-        <script type='module' src="/js/pages/Login/login.js"></script>
+        <script type='module' src="/src/js/pages/Login/login.js"></script>
 
     </main>
 
     <script type="module">
-        import { setupDynamicNavigation } from './src/js/utils/pageLoader.js';
+        import { setupDynamicNavigation } from '/src/js/utils/pageLoader.js';
 
         async function loadNavBar() {
             try {
-                const response = await fetch('./src/components/navBar/navBar.html');
+                const response = await fetch('/src/components/navBar/navBar.html');
                 const html = await response.text();
                 document.getElementById('nav-placeholder').innerHTML = html;
 
                 setupDynamicNavigation();
 
                 const script = document.createElement('script');
-                script.src = './src/js/global/navBar/navBar.js';
+                script.src = '/src/js/global/navBar/navBar.js';
                 document.body.appendChild(script);
             } catch (err) {
                 console.error('Erro ao carregar a navbar:', err);
