--- a/src/professionalProfile.html
+++ b/src/professionalProfile.html
@@ -22,7 +22,7 @@
   <div class="content-profile">
    <header class="professional-profile__header">
     <h1 class="professional-profile__title">Profissionais Cadastrados</h1>
-   <a href="/professionalCad.html"> <button class="professional-profile__button" >Criar Cadastro</button></a>
+   <a href="professionalCad.html"> <button class="professional-profile__button" >Criar Cadastro</button></a>
    </header>
 
    <section class="professional-profile__list">
