--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         async function loadNavBar() {
             try {
-                const response = await fetch('./src/components/navBar/navBar.html');
+                const response = await fetch('/src/components/navBar/navBar.html');
                 const html = await response.text();
                 document.getElementById('nav-placeholder').innerHTML = html;
 
