--- a/src/login.html
+++ b/src/login.html
@@ -5,17 +5,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login - Treino Pro</title>
+
+    <!-- Estilos CSS -->
     <link rel="stylesheet" href="css/global/reset.css" />
     <link rel="stylesheet" href="css/global/index.css" />
     <link rel="stylesheet" href="css/pages/index.css" />
     <link rel="stylesheet" href="css/pages/login/login.css" />
+
+    <!-- Fontes e Ícones -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
 </head>
 
 <body>
-    <!-- Navbar será inserida aqui dinamicamente -->
+    <!-- Navbar será inserida dinamicamente -->
     <div id="nav-placeholder"></div>
 
     <main id="main-content">
@@ -40,13 +44,13 @@
             <p id="mensagem-login"></p>
 
             <a href="register.html" class="register-link">Cadastrar uma conta</a>
-
-
         </form>
-        <script type='module' src="js/pages/Login/login.js"></script>
 
+        <!-- Script específico da página de login -->
+        <script type="module" src="js/pages/Login/login.js"></script>
     </main>
 
+    <!-- Script para carregar a navbar dinamicamente -->
     <script type="module">
         import { setupDynamicNavigation } from './js/utils/pageLoader.js';
 
