--- a/src/professionalCad.html
+++ b/src/professionalCad.html
@@ -1,123 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Cadastro de Perfil Profissional</title>
-  <style>
-    body {
-      display: flex;
-      background-color: #3c3761;
-      font-family: 'Segoe UI', sans-serif;
-      color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* Menu lateral */
-    .sidebar {
-      position: fixed;
-      left: 0;
-      top: 0;
-      width: 200px;
-      height: 100%;
-      background-color: #103c5a;
-      padding-top: 30px;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-    }
-
-    .sidebar a {
-      display: block;
-      color: white;
-      padding: 15px 20px;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .sidebar a:hover {
-      background-color: #155c8e;
-    }
-
-    /* Área principal ao lado da sidebar */
-    .main-content {
-      margin-left: 200px;
-      width: calc(100% - 200px);
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding-top: 50px;
-    }
-
-    /* Formulário */
-    .container {
-      width: 100%;
-      max-width: 1000px; /* Aumentei de 800px para 1000px */
-      background-color: #1e1e2f;
-      padding: 30px;
-      border-radius: 20px;
-      border: 1px solid #ffc857;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    }
-
-    h2 {
-      text-align: center;
-      color: #ffc857;
-    }
-
-    label {
-      display: block;
-      margin-bottom: 5px;
-      color: #ffc857;
-    }
-
-    input, select {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 20px;
-      border: none;
-      border-radius: 8px;
-      background-color: #2c2c3e;
-      color: #fff;
-    }
-
-    input[type="file"] {
-      background-color: transparent;
-    }
-
-    button {
-      background-color: #ffc857;
-      color: #1e1e2f;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      font-weight: bold;
-      margin-right: 10px;
-    }
-
-    button:hover {
-      background-color: #e6ac3a;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/global/reset.css" />
+  <link rel="stylesheet" href="css/global/index.css" />
+  <link rel="stylesheet" href="css/pages/index.css" />
+  <link rel="stylesheet" href="css/pages/professional/professionalCad.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet" />
+  <title>Treino Pro</title>
 </head>
+
 <body>
+  <!-- Navbar dinâmica -->
+  <div id="nav-placeholder"></div>
 
-  <!-- Menu lateral -->
-  <div class="sidebar">
-    <a href="#">VISUALIZAR PERFIL</a>
-    <a href="#">LISTA DE EXERCÍCIOS</a>
-    <a href="#">CALCULADORA DE IMC</a>
-    <a href="#">LOGIN</a>
-    <a href="#">CADASTRE-SE</a>
-    <a href="#">VER PERFIS PROFISSIONAIS</a>
-  </div>
-
-  <!-- Conteúdo centralizado -->
+  <!-- Conteúdo principal -->
   <main class="main-content">
     <div class="container">
       <h2>Cadastro de Perfil Profissional</h2>
-      
+
       <form action="http://localhost:3000/cadastrar-perfil" method="POST" enctype="multipart/form-data">
-        
         <label for="nome">Nome do Profissional:</label>
         <input type="text" id="nome" name="nome" required>
 
@@ -136,7 +42,7 @@
         <input type="tel" id="telefone" name="telefone" pattern="[0-9]{10,11}" required>
 
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>  
+        <input type="email" id="email" name="email" required>
 
         <label for="especialidade">Especialidade:</label>
         <select id="especialidade" name="especialidade">
@@ -165,5 +71,29 @@
     </div>
   </main>
 
+  <!-- Scripts -->
+  <script type="module">
+    import { setupDynamicNavigation } from "./js/utils/pageLoader.js";
+
+    async function loadNavBar() {
+      try {
+        const response = await fetch("./components/navBar/navBar.html");
+        const html = await response.text();
+        document.getElementById("nav-placeholder").innerHTML = html;
+        setupDynamicNavigation();
+
+        const script = document.createElement("script");
+        script.src = "./js/global/navBar/navBar.js";
+        document.body.appendChild(script);
+      } catch (err) {
+        console.error("Erro ao carregar a navbar:", err);
+      }
+    }
+
+    loadNavBar();
+  </script>
+
+
 </body>
+
 </html>
